manifests/reservation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-backend
  template:
    metadata:
      labels:
        app: reservation-backend
    spec:
      containers:
        - name: reservation-backend
          image: 811288377093.dkr.ecr.us-west-2.amazonaws.com/reservation-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
