manifests/payment-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/payments"
spec:
  selector:
    app:  payment-backend
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
